--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "knex": "^0.15.2",
     "mocha": "^5.2.0",
+    "nightmare": "^3.0.1",
     "pg": "^7.7.1"
   },
   "devDependencies": {
