--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "BYOB",
+  "name": "byob",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Build Your Own Backend",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --exit"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Tobin Nelson",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
